--- a/src/index.css
+++ b/src/index.css
@@ -6,13 +6,23 @@ input:focus, .custom-select:focus {
     border-color: #f0f8ff !important;
 }
 
+@font-face {
+    font-family: "Roboto-Light";
+    src: url("/font/Roboto-Light.ttf");
+}
+@font-face {
+    font-family: "Roboto-Bold";
+    src: url("/font/Roboto-Bold.ttf");
+}
+
 h1, h2, h3, h4, h5, h6 {
-    font-family: "Poppins", sans-serif;
+    font-family: "Roboto-Bold", sans-serif;
 }
 
 body {
     transition: background-color 0.4s ease, color 0.4s ease;
     overflow-x: hidden;
+    font-family: "Roboto-Light", sans-serif;
 }
 
 body.light {
